# controllers/produto.js
@@ -1,11 +1,6 @@
 
 const Produto = require('../models/produto')
 
-exports.buscar = async (req, res) =>{
-
-    res.send('Retornar o produto!')
-}
-
 exports.incluir = async (req, res) =>{
 
     try {
@@ -31,3 +26,68 @@ exports.incluir = async (req, res) =>{
 
 }
 
+exports.listar = async (req, res) =>{   
+
+    try {
+        const produtos = await Produto.find();
+        res.json(produtos);
+
+    } catch (error) {
+        console.error(error); 
+        res.status(500).send('Erro ao listar os produtos!');  
+    }
+
+}
+
+exports.buscar = async (req, res) =>{
+
+    try {
+
+        const { codigo } = req.params;
+        const produto = await Produto.findOne({ codigo });
+
+        res.status(200).send({
+            mensagem: 'Produto encontrado com sucesso!',
+            produto
+        });
+
+    }
+    catch (error) { 
+        console.error(error);
+        res.status(500).send('Erro ao buscar o produto!');
+    }    
+}
+
+exports.alterar = async (req, res) =>{
+ 
+    try {
+        const { codigo } = req.params;
+        const { nome } = req.body;
+
+        const produto = await Produto.findOneAndUpdate({ codigo }, { nome }, { new: true });
+
+        res.status(200).send({
+            mensagem: 'Produto alterado com sucesso!',
+            produto
+        });
+
+    } catch (error) {
+        console.error(error)
+        res.status(400).send('Erro ao alterar o produto!')
+    }
+
+}
+
+exports.excluir = async (req, res) =>{  
+
+    try {
+        const { codigo } = req.params;
+        await Produto.findOneAndDelete({ codigo });
+        res.status(200).send({
+            mensagem: 'Produto excluído com sucesso!'
+        });
+    } catch (error) {
+        console.error(error)
+        res.status(400).send('Erro ao excluir o produto!')  
+    }
+}
