# routes/produto.js
@@ -4,7 +4,11 @@ var router = express.Router();
 
 var controller = require('../controllers/produto')
 
-router.get('/', controller.buscar)
+
 router.post('/', controller.incluir)
+router.get('/', controller.listar)
+router.get('/:codigo', controller.buscar)
+router.put('/:codigo', controller.alterar)
+router.delete('/:codigo', controller.excluir)
 
 module.exports = router
